--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "reactjs-alert": "^2.5.2",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.24.6",
+    "react-google-charts": "^5.2.1",
+    "react-otp-input": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
